# ros2-gazebo-in-wsl2-ubuntu22

./: .gitignore  01.02_README.md  Control.md  README.md  moveit2 ros2control gazebo.md  perception, Moveit2.md  ros2_control hi loop.md
docs/: moveit2_custom_robot_launch.md  moveit2_install_and_test_humble.md
src/arm_5dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/arm_5dof_moveit_config/config/: arm_5dof.srdf  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
src/arm_5dof_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/openarm_bimanual_control/: CMakeLists.txt  package.xml
src/openarm_bimanual_control/config/: bimanual_merge_params.yaml
src/openarm_bimanual_control/include/openarm_bimanual_control/: trajectory_merger.hpp
src/openarm_bimanual_control/launch/: merge_execute.launch.py
src/openarm_bimanual_control/src/: merge_execute_node.cpp  trajectory_merger.cpp
src/pick_and_place/: package.xml  setup.py
src/pick_and_place/launch/: pick_and_place.launch.py
src/pick_and_place/pick_and_place/: moveit_send_goal_example.py  pick_and_place_node.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: ros2_controllers.yaml
src/robot_description/launch/: display.launch.py  ros2_control_sim.launch.py  simulation.launch.py  spawn_robot.launch.py  world.launch.py
src/robot_description/models/arm_5dof/: model.config  model.sdf
src/robot_description/rviz/: display.rviz
src/robot_description/scripts/: joint_state_gui_bridge.py
src/robot_description/urdf/: robot.urdf
src/robot_description/worlds/: tabletop.sdf
